Make notifications accessible by keyboard when opened by keyboard.

Bug: 637351
Test: manually verified as in the bug
Change-Id: I27c833a2a9514af9b105126d1db2d0adffe358c0
Reviewed-on: https://chromium-review.googlesource.com/1059369
Commit-Queue: Tatsuhisa Yamaguchi <yamaguchi@chromium.org>
Reviewed-by: Tetsui Ohkubo <tetsui@chromium.org>
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Reviewed-by: Ahmed Fakhry <afakhry@chromium.org>
Cr-Commit-Position: refs/heads/master@{#561739}
Former-commit-id: 901ea08ea95759b78d836f6da98d319a2680e9e9